--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Talha Turan</h1>
+<p>No repository here yet.</p>
+<br />
+  <a href="http://www.talhaturan.com">talhaturan.com</a>
 </body>
 </html>
